--- a/src/main/resources/segGroupCW/fileUpload.fxml
+++ b/src/main/resources/segGroupCW/fileUpload.fxml
@@ -1,11 +1,22 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import com.jfoenix.controls.JFXButton?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.RadioButton?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.FlowPane?>
+<?import javafx.scene.layout.VBox?>
 
-<VBox alignment="TOP_CENTER" prefHeight="293.0" prefWidth="779.0" spacing="20.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="segGroupCW.FileLoadController">
+<VBox alignment="TOP_CENTER" prefHeight="293.0" prefWidth="779.0" spacing="20.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="segGroupCW.FileLoadController">
     <children>
+      <AnchorPane prefHeight="200.0" prefWidth="200.0">
+         <children>
+            <JFXButton buttonType="RAISED" layoutX="344.0" layoutY="14.0" text="Macarena" />
+         </children>
+      </AnchorPane>
         <Label alignment="TOP_CENTER" text="Upload your Files" />
       <FlowPane alignment="TOP_CENTER" prefHeight="37.0" prefWidth="739.0">
          <children>
@@ -17,8 +28,9 @@
 
       <FlowPane alignment="TOP_CENTER" prefHeight="25.0" prefWidth="0.0">
           <TextField fx:id="imprPathLabel" alignment="CENTER" />
-          <Button fx:id="browseImprBtn" alignment="CENTER"  text="Browse..." />
+          <Button fx:id="browseImprBtn" alignment="CENTER" text="Browse..." />
           <Label text="   impression_log.csv" />
+         <RadioButton mnemonicParsing="false" text="RadioButton" />
       </FlowPane>
 
       <FlowPane alignment="TOP_CENTER" prefHeight="200.0" prefWidth="200.0">
