--- a/src/main/resources/segGroupCW/secondary.fxml
+++ b/src/main/resources/segGroupCW/secondary.fxml
@@ -1,15 +1,300 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.chart.CategoryAxis?>
+<?import javafx.scene.chart.LineChart?>
+<?import javafx.scene.chart.NumberAxis?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ScrollPane?>
+<?import javafx.scene.control.Separator?>
+<?import javafx.scene.effect.DropShadow?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
-<VBox alignment="CENTER" prefHeight="774.0" prefWidth="779.0" spacing="20.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="segGroupCW.SecondaryController">
-    <children>
-        <Label text="Secondary View" />
-        <Button fx:id="secondaryButton" onAction="#switchToPrimary" text="Switch to Primary View" />
-    </children>
-    <padding>
-        <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
-    </padding>
-</VBox>
+<ScrollPane prefHeight="1187.0" prefWidth="849.0" vbarPolicy="ALWAYS" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
+   <content>
+      <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="0.0" prefWidth="851.0">
+         <children>
+            <VBox layoutX="151.0" layoutY="100.0" prefHeight="1099.0" prefWidth="178.0" spacing="20.0" style="-fx-background-color: #828a95;">
+               <children>
+                  <Pane prefHeight="147.0" prefWidth="153.0" style="-fx-background-color: #5bc0be;">
+                     <effect>
+                        <DropShadow />
+                     </effect>
+                     <children>
+                        <Label layoutX="14.0" layoutY="14.0" prefHeight="53.0" prefWidth="132.0" text="NO. OF IMPRESSIONS" wrapText="true">
+                           <font>
+                              <Font name="Verdana Bold" size="12.0" />
+                           </font>
+                        </Label>
+                        <Label layoutX="11.0" layoutY="63.0" prefHeight="70.0" prefWidth="139.0" style="-fx-background-color: #5bc0be;" text="567, 920" textAlignment="CENTER">
+                           <font>
+                              <Font name="System Bold" size="33.0" />
+                           </font>
+                        </Label>
+                     </children>
+                  </Pane>
+                  <Pane prefHeight="147.0" prefWidth="153.0" style="-fx-background-color: #5bc0be;">
+                     <effect>
+                        <DropShadow />
+                     </effect>
+                     <children>
+                        <Label layoutX="14.0" layoutY="14.0" prefHeight="53.0" prefWidth="132.0" text="NO. OF CLICKS" wrapText="true">
+                           <font>
+                              <Font name="Verdana Bold" size="12.0" />
+                           </font>
+                        </Label>
+                        <Label layoutX="11.0" layoutY="63.0" prefHeight="70.0" prefWidth="139.0" style="-fx-background-color: #5bc0be;" text="567, 920" textAlignment="CENTER">
+                           <font>
+                              <Font name="System Bold" size="33.0" />
+                           </font>
+                        </Label>
+                     </children>
+                  </Pane>
+                  <Pane prefHeight="147.0" prefWidth="153.0" style="-fx-background-color: #5bc0be;">
+                     <effect>
+                        <DropShadow />
+                     </effect>
+                     <children>
+                        <Label layoutX="14.0" layoutY="14.0" prefHeight="53.0" prefWidth="132.0" text="NO. OF UNIQUES" wrapText="true">
+                           <font>
+                              <Font name="Verdana Bold" size="12.0" />
+                           </font>
+                        </Label>
+                        <Label layoutX="11.0" layoutY="63.0" prefHeight="70.0" prefWidth="139.0" style="-fx-background-color: #5bc0be;" text="567, 920" textAlignment="CENTER">
+                           <font>
+                              <Font name="System Bold" size="33.0" />
+                           </font>
+                        </Label>
+                     </children>
+                  </Pane>
+                  <Pane prefHeight="147.0" prefWidth="153.0" style="-fx-background-color: #5bc0be;">
+                     <effect>
+                        <DropShadow />
+                     </effect>
+                     <children>
+                        <Label layoutX="14.0" layoutY="14.0" prefHeight="53.0" prefWidth="132.0" text="NO. OF BOUNCES" wrapText="true">
+                           <font>
+                              <Font name="Verdana Bold" size="12.0" />
+                           </font>
+                        </Label>
+                        <Label layoutX="11.0" layoutY="63.0" prefHeight="70.0" prefWidth="139.0" style="-fx-background-color: #5bc0be;" text="567, 920" textAlignment="CENTER">
+                           <font>
+                              <Font name="System Bold" size="33.0" />
+                           </font>
+                        </Label>
+                     </children>
+                  </Pane>
+                  <Pane prefHeight="147.0" prefWidth="153.0" style="-fx-background-color: #5bc0be;">
+                     <effect>
+                        <DropShadow />
+                     </effect>
+                     <children>
+                        <Label layoutX="14.0" layoutY="14.0" prefHeight="53.0" prefWidth="132.0" text="NO. OF CONVERSIONS" wrapText="true">
+                           <font>
+                              <Font name="Verdana Bold" size="12.0" />
+                           </font>
+                        </Label>
+                        <Label layoutX="11.0" layoutY="63.0" prefHeight="70.0" prefWidth="139.0" style="-fx-background-color: #5bc0be;" text="567, 920" textAlignment="CENTER">
+                           <font>
+                              <Font name="System Bold" size="33.0" />
+                           </font>
+                        </Label>
+                     </children>
+                  </Pane>
+                  <Pane prefHeight="147.0" prefWidth="153.0" style="-fx-background-color: #5bc0be;">
+                     <effect>
+                        <DropShadow />
+                     </effect>
+                     <children>
+                        <Label layoutX="14.0" layoutY="14.0" prefHeight="53.0" prefWidth="132.0" text="NO. OF IMPRESSIONS" wrapText="true">
+                           <font>
+                              <Font name="Verdana Bold" size="12.0" />
+                           </font>
+                        </Label>
+                        <Label layoutX="11.0" layoutY="63.0" prefHeight="70.0" prefWidth="139.0" style="-fx-background-color: #5bc0be;" text="567, 920" textAlignment="CENTER">
+                           <font>
+                              <Font name="System Bold" size="33.0" />
+                           </font>
+                        </Label>
+                     </children>
+                  </Pane>
+               </children>
+               <padding>
+                  <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+               </padding>
+            </VBox>
+            <VBox layoutX="329.0" layoutY="99.0" prefHeight="1099.0" prefWidth="524.0" spacing="20.0" style="-fx-background-color: #828a95;">
+               <children>
+                  <Pane prefHeight="148.0" prefWidth="504.0" style="-fx-background-color: #5bc0be;">
+                     <children>
+                        <LineChart createSymbols="false" horizontalGridLinesVisible="false" layoutX="-7.0" prefHeight="147.0" prefWidth="504.0">
+                           <xAxis>
+                              <CategoryAxis side="BOTTOM" />
+                           </xAxis>
+                           <yAxis>
+                              <NumberAxis side="LEFT" />
+                           </yAxis>
+                        </LineChart>
+                     </children>
+                     <effect>
+                        <DropShadow />
+                     </effect>
+                  </Pane>
+                  <Pane prefHeight="148.0" prefWidth="504.0" style="-fx-background-color: #5bc0be;">
+                     <children>
+                        <LineChart createSymbols="false" horizontalGridLinesVisible="false" layoutX="-7.0" prefHeight="147.0" prefWidth="504.0">
+                           <xAxis>
+                              <CategoryAxis side="BOTTOM" />
+                           </xAxis>
+                           <yAxis>
+                              <NumberAxis side="LEFT" />
+                           </yAxis>
+                        </LineChart>
+                     </children>
+                     <effect>
+                        <DropShadow />
+                     </effect>
+                  </Pane>
+                  <Pane prefHeight="148.0" prefWidth="504.0" style="-fx-background-color: #5bc0be;">
+                     <children>
+                        <LineChart createSymbols="false" horizontalGridLinesVisible="false" layoutX="-7.0" prefHeight="147.0" prefWidth="504.0">
+                           <xAxis>
+                              <CategoryAxis side="BOTTOM" />
+                           </xAxis>
+                           <yAxis>
+                              <NumberAxis side="LEFT" />
+                           </yAxis>
+                        </LineChart>
+                     </children>
+                     <effect>
+                        <DropShadow />
+                     </effect>
+                  </Pane>
+                  <Pane prefHeight="148.0" prefWidth="504.0" style="-fx-background-color: #5bc0be;">
+                     <children>
+                        <LineChart createSymbols="false" horizontalGridLinesVisible="false" layoutX="-7.0" prefHeight="147.0" prefWidth="504.0">
+                           <xAxis>
+                              <CategoryAxis side="BOTTOM" />
+                           </xAxis>
+                           <yAxis>
+                              <NumberAxis side="LEFT" />
+                           </yAxis>
+                        </LineChart>
+                     </children>
+                     <effect>
+                        <DropShadow />
+                     </effect>
+                  </Pane>
+                  <Pane prefHeight="148.0" prefWidth="504.0" style="-fx-background-color: #5bc0be;">
+                     <children>
+                        <LineChart createSymbols="false" horizontalGridLinesVisible="false" layoutX="-7.0" prefHeight="147.0" prefWidth="504.0">
+                           <xAxis>
+                              <CategoryAxis side="BOTTOM" />
+                           </xAxis>
+                           <yAxis>
+                              <NumberAxis side="LEFT" />
+                           </yAxis>
+                        </LineChart>
+                     </children>
+                     <effect>
+                        <DropShadow />
+                     </effect>
+                  </Pane>
+                  <Pane prefHeight="148.0" prefWidth="504.0" style="-fx-background-color: #5bc0be;">
+                     <children>
+                        <LineChart createSymbols="false" horizontalGridLinesVisible="false" layoutX="-7.0" prefHeight="147.0" prefWidth="504.0">
+                           <xAxis>
+                              <CategoryAxis side="BOTTOM" />
+                           </xAxis>
+                           <yAxis>
+                              <NumberAxis side="LEFT" />
+                           </yAxis>
+                        </LineChart>
+                     </children>
+                     <effect>
+                        <DropShadow />
+                     </effect>
+                  </Pane>
+               </children>
+               <padding>
+                  <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+               </padding>
+            </VBox>
+            <VBox layoutY="100.0" prefHeight="1105.0" prefWidth="151.0" spacing="20.0" style="-fx-background-color: #1c2541;">
+               <children>
+                  <Label prefHeight="34.0" prefWidth="151.0" text="  CAMPAIGNS" textFill="WHITE">
+                     <font>
+                        <Font name="Verdana Bold" size="12.0" />
+                     </font>
+                  </Label>
+                  <Button mnemonicParsing="false" prefHeight="25.0" prefWidth="155.0" text="Campaign 1">
+                     <font>
+                        <Font name="System Bold" size="12.0" />
+                     </font></Button>
+                  <Separator prefWidth="200.0" />
+                  <Button mnemonicParsing="false" prefHeight="25.0" prefWidth="155.0" text="Campaign 2">
+                     <font>
+                        <Font name="System Bold" size="12.0" />
+                     </font>
+                  </Button>
+                  <Separator prefWidth="200.0" />
+               </children>
+               <padding>
+                  <Insets bottom="20.0" top="20.0" />
+               </padding>
+               <effect>
+                  <DropShadow />
+               </effect>
+            </VBox>
+            <HBox alignment="TOP_RIGHT" prefHeight="100.0" prefWidth="849.0" style="-fx-background-color: #3a506b;">
+               <children>
+                  <Pane prefHeight="100.0" prefWidth="246.0">
+                     <children>
+                        <Button fx:id="accountButton" layoutX="4.0" layoutY="27.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="32.0">
+                           <graphic>
+                              <ImageView fitHeight="35.0" fitWidth="45.0" pickOnBounds="true" preserveRatio="true">
+                                 <image>
+                                    <Image url="@../../../../../../Downloads/user_5-15-512.png" />
+                                 </image>
+                              </ImageView>
+                           </graphic></Button>
+                     </children>
+                  </Pane>
+                  <Pane prefHeight="100.0" prefWidth="370.0">
+                     <children>
+                        <Label layoutX="56.0" layoutY="10.0" prefHeight="70.0" prefWidth="285.0" text="Dashboard" textFill="WHITE">
+                           <font>
+                              <Font name="Verdana" size="48.0" />
+                           </font>
+                        </Label>
+                     </children>
+                  </Pane>
+                  <Pane prefHeight="100.0" prefWidth="218.0">
+                     <children>
+                        <Button layoutX="72.0" layoutY="14.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="123.0" text="Change Campaign" />
+                        <Button layoutX="72.0" layoutY="50.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="123.0" text="Filter">
+                           <graphic>
+                              <ImageView fitHeight="49.0" fitWidth="36.0" pickOnBounds="true" preserveRatio="true">
+                                 <image>
+                                    <Image url="@../../../../../../Downloads/Filter-512.png" />
+                                 </image>
+                              </ImageView>
+                           </graphic></Button>
+                     </children>
+                  </Pane>
+               </children>
+               <effect>
+                  <DropShadow />
+               </effect>
+            </HBox>
+         </children>
+      </AnchorPane>
+   </content>
+</ScrollPane>
