--- a/src/main/resources/segGroupCW/dashboard.fxml
+++ b/src/main/resources/segGroupCW/dashboard.fxml
@@ -17,7 +17,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<ScrollPane fx:id="scrollPane" prefHeight="1187.0" prefWidth="849.0" vbarPolicy="ALWAYS" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="segGroupCW.SecondaryController">
+<ScrollPane fx:id="scrollPane" prefHeight="1187.0" prefWidth="849.0" vbarPolicy="ALWAYS" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="segGroupCW.DashboardController">
    <content>
       <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="0.0" prefWidth="851.0">
          <children>
@@ -50,7 +50,7 @@
                               <Font name="Verdana Bold" size="12.0" />
                            </font>
                         </Label>
-                        <Label fx:id="value2" layoutX="11.0" layoutY="63.0" prefHeight="70.0" prefWidth="139.0" style="-fx-background-color: #5bc0be;" text="567, 920" textAlignment="CENTER">
+                        <Label fx:id="value2" layoutX="11.0" layoutY="63.0" onMouseClicked="#clicksLabel" prefHeight="70.0" prefWidth="139.0" style="-fx-background-color: #5bc0be;" text="567, 920" textAlignment="CENTER">
                            <font>
                               <Font name="System Bold" size="33.0" />
                            </font>
